<?xml version="1.0" encoding="utf-8"?>
<resources
  xmlns:tools="http://schemas.android.com/tools"
  tools:ignore="MissingTranslation" >    
    
    <string name="app_name">RadQRCode</string>
    <string name="search_hint">Search for cases</string>
    <string name="about">About</string>
    <string name="import_cases">Import</string>
    <string name="export_cases">Export</string>
    <string name="search">Search</string>
    <string name="scan">Scan</string>
    <string name="delete_db">Delete Database</string>
    <string name="new_case">New Case</string>
    <string name="create_qr">Create QR Code</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="description">Description</string>
    <string name="mrn">MRN</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="study">Study</string>
    <string name="follow_up">Follow-up</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

</resources>